fix: KTrain's inexistent bsky, bad hovered contrast in index button this doesnt sound confusing at all

--- a/css/index.css
+++ b/css/index.css
@@ -51,7 +51,7 @@ ul li:hover {
 }
 
 ul li a { /* u ii a i u iii a i */
-  color: inherit; /* Inherits the colour from li */
+  color: white;
   display: block; /* Ensures that padding actually works */
   padding: 10px;
 }
